# agentsentinel

./: .gitignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/osquery/: agentsentinel.conf
configs/wazuh/decoders/: agentsentinel_decoders.xml
configs/wazuh/rules/: agentsentinel_rules.xml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/input-shield/: Cargo.toml
crates/input-shield/benches/: shield_benchmark.rs
crates/input-shield/src/: canary.rs  lib.rs  patterns.rs  shield.rs
crates/nodejs/: Cargo.toml  index.ts  package-lock.json  package.json
crates/nodejs/src/: lib.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/python/agentsentinel/: __init__.py
crates/python/src/: lib.rs
demo/: scenario_1_injection.py  scenario_2_behavior.py  scenario_3_audit.py
docs/: DEMO_SCREENPLAY.md  EXECUTIVE_SUMMARY.md  HACKATHON_SUBMISSION.md  TODO.md
docs/adr/: 001-rust-python-architecture.md
docs/planning/: 00-OVERVIEW.md  01-PHASE-0-SETUP.md  02-PHASE-1-INPUT-SHIELD.md  03-PHASE-2-BEHAVIOR-MONITOR.md  04-PHASE-3-INFRA-MONITOR.md  05-PHASE-4-RED-TEAM.md  06-PHASE-5-SOLANA-REGISTRY.md  07-PHASE-6-SDK.md  08-PHASE-7-INTEGRATION.md  09-OPENSOURCE-STRATEGY.md
python/agentsentinel/: __init__.py
scripts/: deploy_solana.sh  setup_osquery.sh  setup_wazuh.sh
solana_registry/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
solana_registry/programs/agent_registry/: Cargo.toml
solana_registry/programs/agent_registry/src/: errors.rs  lib.rs  state.rs
solana_registry/sdk/: package.json
solana_registry/sdk/src/: index.ts
solana_registry/tests/: agent_registry.ts
src/agentsentinel/: __init__.py
src/agentsentinel/api/: __init__.py  main.py
src/agentsentinel/behavior_monitor/: __init__.py  anomaly.py  baseline.py  models.py  monitor.py  tx_simulator.py
src/agentsentinel/infra_monitor/: __init__.py  monitor.py  osquery_client.py  wazuh_client.py
src/agentsentinel/input_shield/: __init__.py  shield.py
src/agentsentinel/red_team/: __init__.py  cli.py  payloads.py  reporter.py  reports.py  scanner.py
tests/: __init__.py
tests/unit/: test_behavior_monitor.py  test_infra_monitor.py  test_red_team.py
