[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/input-shield",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentsentinel/agentsentinel"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
regex = "1.10"
aho-corasick = "1.1"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
