[project]
name = "agentsentinel"
version = "0.1.0"
description = "Comprehensive security framework for AI agents - Prompt injection detection, behavioral monitoring, and on-chain security attestations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AgentSentinel Contributors"}
]
keywords = ["security", "ai", "agent", "prompt-injection", "llm", "solana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]
wazuh = [
    "wazuh-api>=4.0",
]
full = [
    "agentsentinel[dev,wazuh]",
]

[project.scripts]
agentsentinel-redteam = "agentsentinel.red_team.cli:main"

[project.urls]
Homepage = "https://github.com/joaoariedi/agentsentinel"
Documentation = "https://github.com/joaoariedi/agentsentinel#readme"
Repository = "https://github.com/joaoariedi/agentsentinel"
Changelog = "https://github.com/joaoariedi/agentsentinel/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsentinel"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = true
