[tool.poetry]
name = "agentsentinel"
version = "0.1.0"
description = "Comprehensive security framework for AI agents - Prompt injection detection, behavioral monitoring, and on-chain security attestations"
readme = "README.md"
license = "MIT"
authors = ["AgentSentinel Contributors"]
keywords = ["security", "ai", "agent", "prompt-injection", "llm", "solana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "agentsentinel", from = "src"}]

[tool.poetry.urls]
Homepage = "https://github.com/joaoariedi/agentsentinel"
Documentation = "https://github.com/joaoariedi/agentsentinel#readme"
Repository = "https://github.com/joaoariedi/agentsentinel"
Changelog = "https://github.com/joaoariedi/agentsentinel/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
httpx = "^0.25"
structlog = "^24.0"
fastapi = "^0.109"
uvicorn = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.2"
mypy = "^1.8"

[tool.poetry.scripts]
agentsentinel-api = "agentsentinel.api.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
