[package]
name = "agentsentinel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and utilities for AgentSentinel security framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
