[package]
name = "agentsentinel-input-shield"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance input shield for prompt injection detection"

[dependencies]
agentsentinel-core = { path = "../core" }
aho-corasick = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "shield_benchmark"
harness = false
