[package]
name = "agentsentinel_nodejs"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentsentinel_nodejs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi7"] }
napi-derive = "1"
agentsentinel-core = { path = "../core" }
agentsentinel-input-shield = { path = "../input-shield" }
serde_json = "1.0"
