[package]
name = "agentsentinel_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentsentinel_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
agentsentinel-core = { path = "../core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
