[package]
name = "agentsentinel_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for AgentSentinel security framework"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
agentsentinel-core = { path = "../core" }
agentsentinel-input-shield = { path = "../input-shield" }
