[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "agentsentinel-core"
version = "0.1.0"
description = "High-performance Python bindings for AgentSentinel security framework (Rust core)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["security", "ai", "agent", "prompt-injection", "llm", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/joaoariedi/agentsentinel"
Repository = "https://github.com/joaoariedi/agentsentinel"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agentsentinel._core"
